--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <html lang='hebrew' >
 <head>
-<title>oקישורים שאין להם מקום</title>
+<title>קישורים שאין להם מקום</title>
 
 </head>
 
 <!-- זה הערות שלי -->
 
-<body style="background-color:#D2B48C;">
+<body style="background-color:#b51a1c;">
 hbhbh
 <h1 title='הכותרת הכי חשובה' style="color:red; font-size:50pxc; border:2px solid yellow;">הכותרת הכי חשובה</h1>
 <h2 title='פחות חשובה' style='color:green; background-color:brown; text-align:center;'>פחות חשובה</h2>
