--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 <h6 title='...פחות' style='text-align:center;'>...פחות</h6>
 <hr>
 
-<br>
-<button onclick="https://www.w3schools.com/html/html_links.asp">njnjdn</button>
-<br>
-<a href="https://www.w3schools.com/tags/ref_colornames.asp" style="color:#8A2BE2; font-size:35px;">אתר 
-<a  href="https://www.w3schools.com/tags/ref_colornames.asp" style="color:#A52A2A; font-size:35px;">עם 
-<a  href="https://www.w3schools.com/tags/ref_colornames.asp" style="color:#00FFFF; font-size:35px;">הגדרות 
-<a  href="https://www.w3schools.com/tags/ref_colornames.asp" style="color:#006400; font-size:35px;">של 
-<a  href="https://www.w3schools.com/tags/ref_colornames.asp" style="color:#FF1493; font-size:35px;">צבעים 
+
+
+<a href="https://www.w3schools.com/tags/ref_colornames.asp" title='אתר' style="color:#8A2BE2; font-size:35px; text-align: center;">אתר 
+<a  href="https://www.w3schools.com/tags/ref_colornames.asp" title='עם' style="color:#A52A2A; font-size:35px;">עם 
+<a  href="https://www.w3schools.com/tags/ref_colornames.asp" title='הגדרות' style="color:#00FFFF; font-size:35px;">הגדרות 
+<a  href="https://www.w3schools.com/tags/ref_colornames.asp" title='של' style="color:#006400; font-size:35px;">של 
+<a  href="https://www.w3schools.com/tags/ref_colornames.asp" title='צבעים' style="color:#FF1493; font-size:35px;">צבעים 
 <br><br>
 <a href="https://github.com/" style='color: #006400; font-size: 20px;'>github</a>
 
@@ -36,15 +35,6 @@
 
 
 
-<pre>
-  My Bonnie lies over the ocean.
-
-  My Bonnie lies over the sea.
-
-  My Bonnie lies over the ocean.
-
-  Oh, bring back my Bonnie to me.
-</pre>
 
 
 </body>
