--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
 
 
-<a href="https://www.w3schools.com/tags/ref_colornames.asp" title='אתר' style="color:#8A2BE2; font-size:35px; text-align: center;">אתר 
-<a  href="https://www.w3schools.com/tags/ref_colornames.asp" title='עם' style="color:#A52A2A; font-size:35px;">עם 
-<a  href="https://www.w3schools.com/tags/ref_colornames.asp" title='הגדרות' style="color:#00FFFF; font-size:35px;">הגדרות 
-<a  href="https://www.w3schools.com/tags/ref_colornames.asp" title='של' style="color:#006400; font-size:35px;">של 
-<a  href="https://www.w3schools.com/tags/ref_colornames.asp" title='צבעים' style="color:#FF1493; font-size:35px;">צבעים 
+<a href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='אתר' style="color:#8A2BE2; font-size:35px; text-align: center;">אתר 
+<a  href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='עם' style="color:#d4d728; font-size:35px;">עם 
+<a  href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='הגדרות' style="color:#00FFFF; font-size:35px;">הגדרות 
+<a  href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='של' style="color:#006400; font-size:35px;">של 
+<a  href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='צבעים' style="color:#FF1493; font-size:35px;">צבעים 
 <br><br>
-<a href="https://github.com/" style='color: #006400; font-size: 20px;'>github</a>
+<a href="https://github.com/"target="_blank" style='color: #006400; font-size: 20px;'>github</a>
 
 <br><br>
 <a href="https://www.w3schools.com" target="_blank">w3schools אתר</a>
@@ -35,7 +35,7 @@
 
 
 
-
+  
 
 </body>
 
