--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 
-<html lang='hebrew' >
-<head>
+
+
 <title>קישורים שאין להם מקום</title>
 
+
+<head>
+    <link rel="stylesheet" type="text/css" href="first.css">
 </head>
-
 <!-- זה הערות שלי -->
+<!-- commit = main6 -->
 
-<body style="background-color:#b51a1c;">
+<body font-family: Times, serif; color: red; background-color: blue;>
 
 
-<h1 title='הכותרת הכי חשובה' style="color:red; font-size:50pxc; border:2px solid yellow;">הכותרת הכי חשובה</h1>
+<h1 title='הכותרת הכי חשובה' style="color:red; font-size:50pxc; border:2px solid yellow; text-align: center;">הכותרת הכי חשובה</h1>
 <h2 title='פחות חשובה' style='color:green; background-color:brown; text-align:center;'>פחות חשובה</h2>
 <h4 title='פחות' style='text-align:center;'>פחות</h4>
 <h5 title='פחות' style='text-align:center;'>פחות</h5>
@@ -27,7 +30,8 @@
 <a  href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='צבעים' style="color:#FF1493; font-size:35px;">צבעים 
 <br><br>
 <a href="https://github.com/"target="_blank" style='color: #006400; font-size: 20px;'>github</a>
-
+<br>
+<a href="https://app.diagrams.net/">אתר ליצירת UML</a>
 <br><br>
 <a href="https://www.w3schools.com" target="_blank">w3schools אתר</a>
 <p>.הפסקה הראשונה</p>
@@ -39,4 +43,3 @@
 
 </body>
 
-</html>
