--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="first.css">
 </head>
 <!-- זה הערות שלי -->
-<!-- commit = main6 -->
+<!-- commit = main7 -->
 
 <body font-family: Times, serif; color: red; background-color: blue;>
 
@@ -36,6 +36,15 @@
 <a href="https://www.w3schools.com" target="_blank">w3schools אתר</a>
 <p>.הפסקה הראשונה</p>
 <p style='color:rgb(94, 255, 0);'><i>.הפסקה שניה נטויה</i></p>
+
+
+
+<section class="image">
+    <blockquote>
+      "Documentation is important"
+    </blockquote>
+    <img src="IMG_6146.JPG" alt="Italian Trulli">
+  </section>
 
 
 
