--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
+
+
+<head>
+    <link rel="stylesheet" type="text/css" href="first.css">
+    <link rel="icon" type="image/x-icon" href="image.png">
+</head>
+
 
 
 
 <title>קישורים שאין להם מקום</title>
 
 
-<head>
-    <link rel="stylesheet" type="text/css" href="first.css">
-</head>
+
 <!-- זה הערות שלי -->
 <!-- commit = main7 -->
 
-<body font-family: Times, serif; color: red; background-color: blue;>
+<body>
 
 
 <h1 title='הכותרת הכי חשובה' style="color:red; font-size:50pxc; border:2px solid yellow; text-align: center;">הכותרת הכי חשובה</h1>
@@ -21,8 +25,9 @@
 <h6 title='...פחות' style='text-align:center;'>...פחות</h6>
 <hr>
 
+<a href="https://learngitbranching.js.org/">לימוד git</a>
 
-
+<br>
 <a href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='אתר' style="color:#8A2BE2; font-size:35px; text-align: center;">אתר 
 <a  href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='עם' style="color:#d4d728; font-size:35px;">עם 
 <a  href="https://www.w3schools.com/tags/ref_colornames.asp"target="_blank" title='הגדרות' style="color:#00FFFF; font-size:35px;">הגדרות 
@@ -36,6 +41,9 @@
 <a href="https://www.w3schools.com" target="_blank">w3schools אתר</a>
 <p>.הפסקה הראשונה</p>
 <p style='color:rgb(94, 255, 0);'><i>.הפסקה שניה נטויה</i></p>
+
+
+
 
 
 
